--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,7 +1,7 @@
 @import './base/normalize';
 @import './base/common.scss';
 @import './base/global.scss';
-
+@import './transitionView.scss';
 body {
   background-color: #ffffff;
   font-family: 'Microsoft YaHei', 'Helvetica Neue', HelveticaNeue, Helvetica, TeXGyreHeros, FreeSans, 'Nimbus Sans L',
